[package]
name = "raydium-client"
version = "0.1.0"
edition = "2021"

[lib]


[features]
devnet = [
    "raydium_amm/devnet",
    "raydium-library/devnet",
]
default = ["devnet"]


[dependencies]
# raydium 
raydium-library = { git = "https://github.com/raydium-io/raydium-library", package = "raydium-library" }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
# solana 
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
# crabs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.53"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
ansi_term = "0.12"
dotenv = "0.15"


[dev-dependencies]
ctor = "0.1"